source3/auth/auth_ntlmssp.c
@@ -198,7 +198,9 @@ NTSTATUS auth3_check_password(struct auth4_context *auth4_context,
 							user_info->client.account_name,
 							user_info->client.domain_name,
 							&server_info);
-		*server_returned_info = talloc_steal(mem_ctx, server_info);
+		if (NT_STATUS_IS_OK(nt_status)) {
+			*server_returned_info = talloc_steal(mem_ctx, server_info);
+		}
 		return nt_status;
 	}
 
